# eqnn-jax

./: pyproject.toml
eqnn_jax/: __init__.py
eqnn_jax/benchmarks/: __init__.py
eqnn_jax/models/: __init__.py
